--- a/config.toml
+++ b/config.toml
@@ -18,9 +18,9 @@ Paginate = 3
     weight = 20
     url = "/crypto-101/"
 [[menu.main]]
-    name = "Purchase"
+    name = "Exchange"
     weight = 30
-    url = "/purchase/"
+    url = "/exchange/"
 [[menu.main]]
     name = "Tokens"
     weight = 40
