--- a/data/exchanges.toml
+++ b/data/exchanges.toml
@@ -2,46 +2,114 @@
 name = "Coinbase"
 cornerIcon = "star"
 cornerText = "Popular"
-payment = "Bank transfer +"
-fiat = "USD, GBP, CAD"
+payment = "Bank transfer, SEPA, Credit/Debit card"
+fiat = "USD, EUR, GBP, CAD"
 tokens = "Bitcoin, Ethereum, Litecoin"
 founded = "2012, USA"
 target = "Anyone"
-fees = "0.25%"
-comments = "Largest exchange in the world. Safe and well designed."
+comments = "Largest exchange in the world. Safe and well designed"
 
-[cexio]
-name = "CEX.io"
+[cex]
+name = "CEX"
 cornerIcon = "star"
 cornerText = "Popular"
-payment = "Bank transfer +"
-fiat = "USD, GBP, CAD"
-tokens = "Bitcoin, Ethereum, Litecoin"
-founded = "2012, USA"
+payment = "Bank transfer, SEPA, Credit/Debit card"
+fiat = "USD, EUR, GBP, RUB"
+tokens = "Bitcoin, Ethereum"
+founded = "2013, UK"
 target = "Anyone"
-fees = "0.25%"
-comments = "Largest exchange in the world. Safe and well designed."
+comments = "Fast, reliable and well-designed European-based exchange"
 
 [localbitcoins]
 name = "Local Bitcoins"
-cornerIcon = "star"
+cornerIcon = "cash"
 cornerText = "Cash"
-payment = "Bank transfer +"
-fiat = "USD, GBP, CAD"
-tokens = "Bitcoin, Ethereum, Litecoin"
-founded = "2012, USA"
+payment = "Cash"
+fiat = "All"
+tokens = "Bitcoin"
+founded = "2012, Finland"
 target = "Anyone"
-fees = "0.25%"
-comments = "Largest exchange in the world. Safe and well designed."
+comments = "Local over-the-counter platform that enables private and cash transactions"
 
 [changelly]
 name = "Changelly"
-cornerIcon = "speed"
+cornerIcon = "altcoin"
 cornerText = "Altcoin"
-payment = "Bank transfer +"
-fiat = "USD, GBP, CAD"
-tokens = "Bitcoin, Ethereum, Litecoin"
+payment = "Tokens, Debit/Credit card"
+fiat = "USD, EUR"
+tokens = "All"
+founded = "2015, Czech Republic"
+target = "Enthusiast"
+comments = "Fast alt-coin exchange without the need to register"
+
+
+[kraken]
+name = "Kraken"
+cornerIcon = "star"
+cornerText = "Popular"
+payment = "Bank transfer, SEPA, Tokens"
+fiat = "USD, EUR, GBP, CAD, JPY"
+tokens = "Most of high caps"
+founded = "2013, USA"
+target = "Enthusiast"
+comments = "US-based exchange with a focus on European market offering a wide range of altcoins"
+
+
+[poloniex]
+name = "Poloniex"
+cornerIcon = "altcoin"
+cornerText = "Altcoin"
+payment = "Token"
+fiat = "No"
+tokens = "All"
+founded = "2014, Unknown"
+target = "Trader"
+comments = "Largest altcoin exchange by volume with a large amount of altcoin pairs"
+
+
+[gdax]
+name = "GDAX"
+cornerIcon = "trader"
+cornerText = "Trader"
+payment = "Bank transfer, SEPA, Credit/Debit card"
+fiat = "USD, EUR, CAD"
+tokens = "BTC, ETH, LTC"
 founded = "2012, USA"
-target = "Anyone"
-fees = "0.25%"
-comments = "Largest exchange in the world. Safe and well designed."
+target = "Trader"
+comments = "Coinbase exchange focused on traders and leverage"
+
+
+[shapeshift]
+name = "ShapeShift"
+cornerIcon = "altcoin"
+cornerText = "Altcoin"
+payment = "Tokens"
+fiat = "No"
+tokens = "All"
+founded = "2013, Switzerland"
+target = "Enthusiast"
+comments = "Easy to use and super fast altcoin exchange platform"
+
+
+[bisq]
+name = "Bisq"
+cornerIcon = "decentralised"
+cornerText = "Decentralised"
+payment = "Tokens"
+fiat = "No"
+tokens = "All"
+founded = "2016"
+target = "Enthusiast"
+comments = ""
+
+
+[coinmama]
+name = "Coin Mama"
+cornerIcon = ""
+cornerText = ""
+payment = ""
+fiat = ""
+tokens = ""
+founded = ""
+target = ""
+comments = ""
