adds social media images, updates social media links, footer social icons and news social icons

--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,8 @@ disqusShortname = "tropyc"
   RSSLink = "/index.xml"
   author = "Tropyc"
   telegram = "Tropyc"
+  facebook = "tropyc"
+  twitter = "tropyc_crypto"
   email = "tropyc.crypto@gmail.com"
 
 [[menu.main]]
