--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-hash": "^4.1.1",
-    "gulp-sass": "^3.1.0",
-    "tocbot": "^3.0.3"
+    "gulp-sass": "^3.1.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6"
