adds affiliate links to exchanges page and data

--- a/data/exchanges.toml
+++ b/data/exchanges.toml
@@ -8,6 +8,8 @@ tokens = "Bitcoin, Ethereum, Litecoin"
 founded = "2012, USA"
 target = "Anyone"
 comments = "Largest exchange in the world. Safe and well designed"
+affiliateLink = "https://www.coinbase.com/join/59abb5ab6c9e6700d36656d6"
+
 
 [cex]
 name = "CEX"
@@ -19,6 +21,8 @@ tokens = "Bitcoin, Ethereum"
 founded = "2013, UK"
 target = "Anyone"
 comments = "Fast, reliable and well-designed European-based exchange"
+affiliateLink = "https://cex.io/r/0/up108516576/0/"
+
 
 [localbitcoins]
 name = "Local Bitcoins"
@@ -30,6 +34,8 @@ tokens = "Bitcoin"
 founded = "2012, Finland"
 target = "Anyone"
 comments = "Local over-the-counter platform that enables private and cash transactions"
+affiliateLink = "https://localbitcoins.com/?ch=esux"
+
 
 [changelly]
 name = "Changelly"
@@ -41,6 +47,7 @@ tokens = "All"
 founded = "2015, Czech Republic"
 target = "Enthusiast"
 comments = "Fast alt-coin exchange without the need to register"
+affiliateLink = "https://changelly.com?ref_id=bb1148b05d23"
 
 
 [kraken]
@@ -53,6 +60,7 @@ tokens = "Most of high caps"
 founded = "2013, USA"
 target = "Enthusiast"
 comments = "US-based exchange with a focus on European market offering a wide range of altcoins"
+affiliateLink = "https://www.kraken.com"
 
 
 [poloniex]
@@ -65,6 +73,7 @@ tokens = "All"
 founded = "2014, Unknown"
 target = "Experienced"
 comments = "Largest altcoin exchange by volume with a large amount of altcoin pairs"
+affiliateLink = "https://poloniex.com"
 
 
 [gdax]
@@ -77,6 +86,7 @@ tokens = "Bitcoin, Ethereum, Litecoin"
 founded = "2012, USA"
 target = "Experienced"
 comments = "Coinbase exchange focused on traders and leverage"
+affiliateLink = "https://www.gdax.com"
 
 
 [shapeshift]
@@ -89,6 +99,7 @@ tokens = "All"
 founded = "2013, Switzerland"
 target = "Enthusiast"
 comments = "Easy to use and super fast altcoin exchange platform"
+affiliateLink = "https://shapeshift.io"
 
 
 [bisq]
@@ -101,6 +112,7 @@ tokens = "All"
 founded = "2016"
 target = "Enthusiast"
 comments = ""
+affiliateLink = "https://bisq.io"
 
 
 [coinmama]
@@ -113,6 +125,7 @@ tokens = "Bitcoin"
 founded = "2015, Israel"
 target = "First time"
 comments = "Fast and convenient exchange that accepts cards and Western Union deposits"
+affiliateLink = "https://www.Coinmama.com/?ref=tropyc."
 
 
 [bitstamp]
@@ -125,6 +138,7 @@ tokens = "Bitcoin, Ethereum, Litecoin, Ripple"
 founded = "2011, Luxembourg"
 target = "Anyone"
 comments = "First European exchange by volume, granted a full Euro license in Luxembourg"
+affiliateLink = "https://www.bitstamp.net"
 
 
 [coincorner]
@@ -137,6 +151,7 @@ tokens = "Bitcoin"
 founded = "2014, UK"
 target = "First time"
 comments = "Convenient and fast bitcoin marketplace based out of Europe"
+affiliateLink = "https://www.coincorner.com"
 
 
 [bitmex]
@@ -149,7 +164,7 @@ tokens = "Most of high caps"
 founded = "2014, Seychelles"
 target = "Experienced"
 comments = "Cryptocurrency marging trading platform for experienced investors"
-
+affiliateLink = "https://www.bitmex.com/register/Xmh8mp"
 
 
 [whaleclub]
@@ -162,7 +177,7 @@ tokens = "Bitcoin, Ethereum, Litecoin, Dash, Monero"
 founded = "2016, Hong Kong"
 target = "Experienced"
 comments = "Marging trading platform for experienced traders that offers more than cryptocurrencies : metals, stocks, bonds etc."
-
+affiliateLink = "https://whaleclub.co/join/UZYqb"
 
 
 [bitbay]
@@ -175,7 +190,7 @@ tokens = "Bitcoin, Ethereum, Litecoin, Lisk"
 founded = "Poland, 2014"
 target = "Enthusiast"
 comments = "Polish based exchanges with neat user experience and stront presence in European market"
-
+affiliateLink = "https://affiliate.bitbay.net/144118"
 
 
 [binance]
@@ -188,3 +203,4 @@ tokens = "All"
 founded = "2017, China"
 target = "Experienced"
 comments = "Chinese-based exchange with low fees, many altcoin pairs and planned to become decentralised"
+affiliateLink = "https://www.binance.com"
