--- a/data/tokens.toml
+++ b/data/tokens.toml
@@ -1,8 +1,6 @@
 [bitcoin]
 name = "Bitcoin"
 year = "2009"
-marketCap = "$6.6 M"
-priceUsd = "$4,000"
 industry = "Payment"
 type = "Currency"
 description = "Digital gold. 1st blockchain and P2P electronic payment system. Unit of account of crypto"
@@ -10,8 +8,6 @@ description = "Digital gold. 1st blockchain and P2P electronic payment system. U
 [ethereum]
 name = "Ethereum"
 year = "2013"
-marketCap = ""
-priceUsd = ""
 industry = "Smart contract"
 type = "Currency"
 description = "Nicknamed Global Computer, platform and tools to develop Dapps and smart contracts"
@@ -19,8 +15,6 @@ description = "Nicknamed Global Computer, platform and tools to develop Dapps an
 [litecoin]
 name = "Litecoin"
 year = "2011"
-marketCap = ""
-priceUsd = ""
 industry = "Payment"
 type = "Currency"
 description = "Digital silver, similar to Bitcoin with improved technical features"
@@ -28,8 +22,6 @@ description = "Digital silver, similar to Bitcoin with improved technical featur
 [ethereumclassic]
 name = "Ethereum Classic"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Smart contract"
 type = "Currency"
 description = "Ethereum original chain, forked after the DAO hack"
@@ -37,8 +29,6 @@ description = "Ethereum original chain, forked after the DAO hack"
 [ripple]
 name = "Ripple"
 year = "2014"
-marketCap = ""
-priceUsd = ""
 industry = "Interbank settlement"
 type = "Currency"
 description = "Hands with hands with leading financial institutions"
@@ -46,8 +36,6 @@ description = "Hands with hands with leading financial institutions"
 [nem]
 name = "NEM"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Blockchain as a Service"
 type = "Currency"
 description = "Public and private blockchain combination with a namedomain"
@@ -55,8 +43,6 @@ description = "Public and private blockchain combination with a namedomain"
 [dash]
 name = "Dash"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Privacy"
 type = "Currency"
 description = "Privacy-focused coin with built-in mixer and PoS consensus"
@@ -64,8 +50,6 @@ description = "Privacy-focused coin with built-in mixer and PoS consensus"
 [neo]
 name = "NEO"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Smart contract"
 type = "Currency"
 description = "The Ethereum of China with programmig language compatibility"
@@ -73,8 +57,6 @@ description = "The Ethereum of China with programmig language compatibility"
 [monero]
 name = "Monero"
 year = "2014"
-marketCap = ""
-priceUsd = ""
 industry = "Privacy"
 type = "Currency"
 description = "Untraceable cryptocurrency leveraged for stealth transactions"
@@ -82,8 +64,6 @@ description = "Untraceable cryptocurrency leveraged for stealth transactions"
 [stratis]
 name = "Stratis"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Blockchain as a Service"
 type = "Currency"
 description = "Blockchain as a service platform implemented in Microsoft's Azure"
@@ -91,8 +71,6 @@ description = "Blockchain as a service platform implemented in Microsoft's Azure
 [waves]
 name = "Waves"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Smart contract"
 type = "Currency"
 description = "Russian based blockchain for crowdfunding, tokens and private sidechains"
@@ -100,8 +78,6 @@ description = "Russian based blockchain for crowdfunding, tokens and private sid
 [zcash]
 name = "Zcash"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Private"
 type = "Currency"
 description = "Built with zero-knowledge proof, launched by a company earning 20% of mining rewards"
@@ -109,17 +85,13 @@ description = "Built with zero-knowledge proof, launched by a company earning 20
 [golem]
 name = "Golem"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Shared computation"
 type = "Asset"
 description = "Global marketplace for sharing idle computer work"
 
 [siacoin]
-name = "Sia Coin"
+name = "Siacoin"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Shared storage"
 type = "Currency"
 description = "Distributed cloud file storage platform"
@@ -127,8 +99,6 @@ description = "Distributed cloud file storage platform"
 [dogecoin]
 name = "Dogecoin"
 year = "2013"
-marketCap = ""
-priceUsd = ""
 industry = "Payment"
 type = "Currency"
 description = "Started as a joke from a japanese dog meme, the shiba inu"
@@ -136,8 +106,6 @@ description = "Started as a joke from a japanese dog meme, the shiba inu"
 [civic]
 name = "Civic"
 year = "2017"
-marketCap = ""
-priceUsd = ""
 industry = "Identity"
 type = "Asset"
 description = "Identity verification and Know Your Customer compliance"
@@ -145,8 +113,6 @@ description = "Identity verification and Know Your Customer compliance"
 [gnosis]
 name = "Gnosis"
 year = "2017"
-marketCap = ""
-priceUsd = ""
 industry = "Prediction market"
 type = "Asset"
 description = "Predective data marketplace: hunch game, insurance, finance price discovery"
@@ -154,8 +120,6 @@ description = "Predective data marketplace: hunch game, insurance, finance price
 [bitshares]
 name = "BitShares"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Asset management"
 type = "Currency"
 description = "Decentralised exchange and asset management platform"
@@ -163,8 +127,6 @@ description = "Decentralised exchange and asset management platform"
 [digibyte]
 name = "DigiByte"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Payment"
 type = "Currency"
 description = "Decentralised payment netwok with lower block time than Bitcoin"
@@ -172,8 +134,6 @@ description = "Decentralised payment netwok with lower block time than Bitcoin"
 [lisk]
 name = "Lisk"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Smart contract"
 type = "Currency"
 description = "Blockchain that enables creation of multiple sidechains"
@@ -181,8 +141,6 @@ description = "Blockchain that enables creation of multiple sidechains"
 [bat]
 name = "Basic Attention Token"
 year = "2017"
-marketCap = ""
-priceUsd = ""
 industry = "Attention Economy"
 type = "Currency"
 description = "Blockchain based digital advertising with internet browser"
@@ -190,8 +148,6 @@ description = "Blockchain based digital advertising with internet browser"
 [stellar]
 name = "Stellar Lumens"
 year = "2014"
-marketCap = ""
-priceUsd = ""
 industry = "Interbank settlement"
 type = "Currency"
 description = "Low cost payment network focused on micro transaction and cross-border settlement"
@@ -199,8 +155,6 @@ description = "Low cost payment network focused on micro transaction and cross-b
 [augur]
 name = "Augur"
 year = "2015"
-marketCap = ""
-priceUsd = ""
 industry = "Prediction market"
 type = "Asset"
 description = "Prediction market built on top of Ethereum"
@@ -208,8 +162,6 @@ description = "Prediction market built on top of Ethereum"
 [Steem]
 name = "Steem"
 year = "2016"
-marketCap = ""
-priceUsd = ""
 industry = "Attention economy"
 type = "Currency"
 description = "Content platform that rewards contributors"
