--- a/data/exchanges.toml
+++ b/data/exchanges.toml
@@ -111,7 +111,7 @@ fiat = "No"
 tokens = "All"
 founded = "2016"
 target = "Enthusiast"
-comments = ""
+comments = "Bisq formerly known as Bitsquare is the first decentralised alt-coin exchange. It runs on their own software."
 affiliateLink = "https://bisq.io"
 
 
