small config changes

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "private": true,
   "keywords": [
-    "crypto"
+    "crypto", "education", "consulting"
   ],
   "author": "Alexis Agostini",
   "license": "UNLICENSED",
