--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^4.0.0-beta",
     "browser-sync": "^2.13.0",
     "css-loader": "^0.28.2",
+    "datatables.net-bs4": "^1.10.16",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
