--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "hugo-bin": "^0.12.0",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
-    "moment": "^2.18.1",
+    "moment": "2.18.1",
     "popper.js": "^1.12.5",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
