sorts out open graph image tags for site and news, fixes news styling

--- a/site/config.toml
+++ b/site/config.toml
@@ -9,6 +9,7 @@ googleAnalytics = "UA-106154604-1"
 disqusShortname = "tropyc"
 
 [Params]
+	images = ["images/tropyc/tropyc-open-graph.png"]
   RSSLink = "/index.xml"
   author = "Tropyc"
   telegram = "Tropyc"
