--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "moment": "2.18.1",
+    "numeral": "^2.0.6",
     "popper.js": "^1.12.5",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
