--- a/site/config.toml
+++ b/site/config.toml
@@ -29,3 +29,18 @@ disqusShortname = "tropyc"
     name = "ICOs - Token sales"
     weight = 30
     url = "/token-sales/"
+
+[related]
+
+# Only include matches with rank >= threshold. This is a normalized rank between 0 and 100.
+threshold = 80
+
+# To get stable "See also" sections we, by default, exclude newer related pages.
+includeNewer = false
+
+# Will lower case keywords in both queries and in the indexes.
+toLower = false
+
+[[related.indices]]
+name = "date"
+weight = 150
